--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -10,7 +10,7 @@
     <include layout="@layout/common_title_pre" />
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="7dp"
         android:background="#fff">
         <ScrollView
@@ -18,13 +18,17 @@
             android:layout_height="match_parent"
             android:scrollbars="none">
             <LinearLayout
+                android:paddingTop="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingBottom="50dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="15dp">
+                >
                 <com.ziyawang.ziyadaily.views.JustifyTextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:lineSpacingMultiplier="1.1"
+                    android:lineSpacingMultiplier="1.2"
                     android:text="@string/ben"
                     android:textColor="#666"
                     android:textSize="15sp" />
