--- a/app/src/main/res/layout/common_title_pre.xml
+++ b/app/src/main/res/layout/common_title_pre.xml
@@ -24,6 +24,7 @@
        </RelativeLayout>
 
        <TextView
+           android:text=""
            android:id="@+id/common_title"
            android:layout_centerInParent="true"
            android:textColor="#333"
