--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -18,13 +18,14 @@
             android:layout_height="match_parent"
             android:scrollbars="none">
             <LinearLayout
-                android:paddingTop="16dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:paddingBottom="50dp"
+                android:orientation="vertical"
+                android:padding="16dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:src="@mipmap/about_head"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
                 <com.ziyawang.ziyadaily.views.JustifyTextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
