--- a/app/src/main/res/layout/activity_details_publish.xml
+++ b/app/src/main/res/layout/activity_details_publish.xml
@@ -44,13 +44,13 @@
                 android:layout_marginLeft="15dp"
                 android:layout_centerVertical="true"
                 android:text="@string/CompanyName"
-                android:layout_width="wrap_content"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content" />
 
             <EditText
                 android:id="@+id/companyName"
                 android:paddingLeft="15dp"
-                android:hint="@string/PleaseInput"
+                android:hint="请输入公司名称"
                 android:textColorHint="#999"
                 android:textColor="#333"
                 android:textSize="15sp"
@@ -72,12 +72,12 @@
                 android:layout_marginLeft="15dp"
                 android:layout_centerVertical="true"
                 android:text="@string/contactPerson"
-                android:layout_width="wrap_content"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content" />
             <EditText
                 android:id="@+id/person"
                 android:paddingLeft="15dp"
-                android:hint="@string/PleaseInput"
+                android:hint="请输入联系人"
                 android:textColorHint="#999"
                 android:textColor="#333"
                 android:textSize="15sp"
@@ -99,12 +99,13 @@
                 android:layout_marginLeft="15dp"
                 android:layout_centerVertical="true"
                 android:text="@string/contactPhone"
-                android:layout_width="wrap_content"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content" />
             <EditText
+                android:inputType="phone"
                 android:id="@+id/phone"
                 android:paddingLeft="15dp"
-                android:hint="@string/PleaseInput"
+                android:hint="请输入联系电话"
                 android:textColorHint="#999"
                 android:textColor="#333"
                 android:textSize="15sp"
