--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -98,7 +98,7 @@
 
         <com.ziyawang.ziyadaily.views.XEditText
             android:paddingRight="16dp"
-            android:inputType="phone"
+            android:inputType="textPassword"
             android:id="@+id/edit_pwd"
             android:drawablePadding="15dp"
             android:textColorHint="#666"
@@ -117,7 +117,7 @@
 
         <com.ziyawang.ziyadaily.views.XEditText
             android:paddingRight="16dp"
-            android:inputType="phone"
+            android:inputType="textPassword"
             android:id="@+id/edit_pwd_again"
             android:drawablePadding="15dp"
             android:textColorHint="#666"
