--- a/app/src/main/res/layout/message_list_items.xml
+++ b/app/src/main/res/layout/message_list_items.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     
-    <com.ziyawang.ziyadaily.views.MyIconImageView
+    <ImageView
         android:id="@+id/image"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="15dp"
         android:layout_width="36dp"
         android:layout_height="36dp" />
