--- a/app/src/main/res/layout/activity_details_daily.xml
+++ b/app/src/main/res/layout/activity_details_daily.xml
@@ -137,7 +137,7 @@
                     android:id="@+id/info_data_view"
                     android:textColor="#999"
                     android:textSize="15sp"
-                    android:text="没有更多评论数据"
+                    android:text="没有更多留言"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
