--- a/app/src/main/res/layout/activity_person.xml
+++ b/app/src/main/res/layout/activity_person.xml
@@ -111,6 +111,7 @@
     </RelativeLayout>
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/basic_changePwd"
         android:paddingLeft="10dp"
         android:textSize="15dp"
