--- a/app/src/main/res/layout/activity_sys_setting.xml
+++ b/app/src/main/res/layout/activity_sys_setting.xml
@@ -95,15 +95,13 @@
 
     <TextView
         android:visibility="gone"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:background="#fff"
         android:id="@+id/logout"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:textSize="15dp"
         android:text="退出登录"
-        android:textColor="#fff"
-        android:background="@drawable/bgea6155_rad5"
+        android:textColor="#333"
         android:layout_width="match_parent"
         android:layout_height="44dp" />
 
