--- a/app/src/main/res/layout/activity_details_publish.xml
+++ b/app/src/main/res/layout/activity_details_publish.xml
@@ -32,37 +32,10 @@
             android:layout_width="match_parent"
             android:layout_height="170dp" />
 
+
         <RelativeLayout
             android:background="#fff"
             android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="50dp">
-            <TextView
-                android:id="@+id/CompanyName"
-                android:textColor="#333"
-                android:textSize="15sp"
-                android:layout_marginLeft="15dp"
-                android:layout_centerVertical="true"
-                android:text="@string/CompanyName"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content" />
-
-            <EditText
-                android:id="@+id/companyName"
-                android:paddingLeft="15dp"
-                android:hint="请输入公司名称"
-                android:textColorHint="#999"
-                android:textColor="#333"
-                android:textSize="15sp"
-                android:layout_toRightOf="@id/CompanyName"
-                android:background="#fff"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:background="#fff"
-            android:layout_marginTop="1px"
             android:layout_width="match_parent"
             android:layout_height="50dp">
             <TextView
@@ -77,7 +50,7 @@
             <EditText
                 android:id="@+id/person"
                 android:paddingLeft="15dp"
-                android:hint="请输入联系人"
+                android:hint="请输入联系人（必填）"
                 android:textColorHint="#999"
                 android:textColor="#333"
                 android:textSize="15sp"
@@ -101,18 +74,49 @@
                 android:text="@string/contactPhone"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content" />
-            <EditText
+            <com.ziyawang.ziyadaily.views.XEditText
+                android:paddingLeft="15dp"
+                android:layout_toRightOf="@id/contactPhone"
+                android:paddingRight="15dp"
                 android:inputType="phone"
                 android:id="@+id/phone"
-                android:paddingLeft="15dp"
-                android:hint="请输入联系电话"
+                android:drawablePadding="15dp"
                 android:textColorHint="#999"
                 android:textColor="#333"
                 android:textSize="15sp"
-                android:layout_toRightOf="@id/contactPhone"
+                android:hint="请输入手机号（必填）"
                 android:background="#fff"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:background="#fff"
+            android:layout_marginTop="1px"
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+            <TextView
+                android:id="@+id/CompanyName"
+                android:textColor="#333"
+                android:textSize="15sp"
+                android:layout_marginLeft="15dp"
+                android:layout_centerVertical="true"
+                android:text="@string/CompanyName"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/companyName"
+                android:paddingLeft="15dp"
+                android:hint="请输入公司名称（非必填）"
+                android:textColorHint="#999"
+                android:textColor="#333"
+                android:textSize="15sp"
+                android:layout_toRightOf="@id/CompanyName"
+                android:background="#fff"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
         </RelativeLayout>
 
     </LinearLayout>
