--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -82,45 +82,62 @@
             android:layout_height="46dp" />
 
         <RelativeLayout
-            android:id="@+id/losePwd"
-            android:layout_marginTop="20dp"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
             android:layout_below="@id/login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp"
-                android:paddingRight="30dp"
-                android:paddingLeft="30dp"
-                android:text="@string/losePwd"
+            <!--立即注册-->
+            <RelativeLayout
+                android:id="@+id/toRegister"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:textColor="#333"
+                    android:textSize="15sp"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="30dp"
+                    android:text="@string/toRegister"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </RelativeLayout>
+            <!--线条-->
+            <TextView
+                android:layout_centerVertical="true"
+                android:id="@+id/ben_line"
+                android:layout_toRightOf="@+id/toRegister"
+                android:background="#333"
+                android:layout_width="1dp"
+                android:layout_height="15dp" />
+            <!--忘记密码-->
+            <RelativeLayout
+
+                android:layout_toRightOf="@+id/ben_line"
+                android:id="@+id/losePwd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:textColor="#333"
+                    android:textSize="15sp"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="30dp"
+                    android:paddingLeft="10dp"
+                    android:text="@string/losePwd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </RelativeLayout>
 
         </RelativeLayout>
 
 
-        <RelativeLayout
-            android:id="@+id/toRegister"
-            android:layout_marginTop="50dp"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/losePwd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:textSize="16sp"
-                android:textColor="#fdd000"
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp"
-                android:paddingRight="30dp"
-                android:paddingLeft="30dp"
-                android:text="@string/toRegister"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </RelativeLayout>
     </RelativeLayout>
 
 </ScrollView>
