--- a/app/src/main/res/layout/details_head.xml
+++ b/app/src/main/res/layout/details_head.xml
@@ -30,6 +30,7 @@
         android:layout_height="wrap_content" />
 
     <RelativeLayout
+        android:visibility="gone"
         android:id="@+id/relative_des"
         android:paddingTop="15dp"
         android:paddingBottom="28dp"
@@ -45,6 +46,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </RelativeLayout>
+
+    <WebView
+        android:layout_marginRight="13dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginTop="10dp"
+        android:scrollbars="vertical"
+        android:id="@+id/detContent01"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <!--项目详情区域-->
     <LinearLayout
