--- a/app/src/main/res/layout/home_items.xml
+++ b/app/src/main/res/layout/home_items.xml
@@ -4,7 +4,54 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:visibility="gone"
+        android:id="@+id/relative_time_title"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_marginBottom="12dp"
+            android:layout_marginTop="12dp"
+            android:textSize="12sp"
+            android:textColor="#f5a300"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_centerInParent="true"
+            android:background="@drawable/bgfff_rad50"
+            android:id="@+id/time_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_marginLeft="20dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/left"
+            android:background="#ddd"
+            android:layout_width="wrap_content"
+            android:layout_height="1px"
+            android:layout_toLeftOf="@+id/time_title"
+            android:layout_toStartOf="@+id/time_title" />
+        <TextView
+            android:layout_marginRight="20dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:id="@+id/right"
+            android:background="#ddd"
+            android:layout_width="wrap_content"
+            android:layout_height="1px"
+            android:layout_toRightOf="@+id/time_title"
+            android:layout_toEndOf="@+id/time_title" />
+
+    </RelativeLayout>
+
     <TextView
+        android:id="@+id/black"
         android:layout_width="match_parent"
         android:layout_height="10dp" />
 
