--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
+    android:windowSoftInputMode="adjustResize|stateHidden"
     android:fitsSystemWindows="true"
     android:background="@color/bg"
     xmlns:android="http://schemas.android.com/apk/res/android"
