--- a/app/src/main/res/layout/details_head.xml
+++ b/app/src/main/res/layout/details_head.xml
@@ -119,4 +119,35 @@
         android:layout_width="match_parent"
         android:layout_height="44dp" />
 
+    <EditText
+        android:imeOptions="actionSearch"
+        android:inputType="text"
+        android:layout_marginTop="30dp"
+        android:id="@+id/edit_des01"
+        android:padding="12dp"
+        android:gravity="left|top"
+        android:textSize="13sp"
+        android:hint="点击输入留言..."
+        android:textColorHint="#999"
+        android:layout_marginRight="13dp"
+        android:layout_marginLeft="13dp"
+        android:background="@drawable/bgf4_rad5"
+        android:minHeight="120dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:layout_marginBottom="10dp"
+        android:id="@+id/text_send01"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="13dp"
+        android:layout_gravity="end"
+        android:gravity="center"
+        android:text="发送"
+        android:background="@drawable/commit"
+        android:textColor="#fff"
+        android:textSize="14sp"
+        android:layout_width="60dp"
+        android:layout_height="22dp" />
+
 </LinearLayout>
