--- a/app/src/main/res/layout/activity_my_gold_add.xml
+++ b/app/src/main/res/layout/activity_my_gold_add.xml
@@ -166,7 +166,7 @@
 
             <!--银行卡支付-->
             <RelativeLayout
-
+                android:visibility="gone"
                 android:layout_below="@id/alipay_relative"
                 android:layout_marginTop="1dp"
                 android:background="#fff"
