--- a/app/src/main/res/layout/details_head.xml
+++ b/app/src/main/res/layout/details_head.xml
@@ -48,6 +48,7 @@
     </RelativeLayout>
 
     <WebView
+        android:layout_marginBottom="5dp"
         android:layout_marginRight="13dp"
         android:layout_marginLeft="13dp"
         android:layout_marginTop="10dp"
